openshift/staging/frontend-route-staging.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: frontend-staging
spec:
  host: stage.34.207.103.20.nip.io
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2018-03-31T17:16:19Z
      status: "True"
      type: Admitted
    host: stage.34.207.103.20.nip.io
    routerName: router
    wildcardPolicy: None
